# cpp-sugar

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CodeCoverage.cmake  csugarConfig.cmake.in
include/: csugar.h
scripts/: build.sh  codecov.sh  format.sh  install.sh  run_ut.sh
src/: crypt.cpp  datetime.cpp  json.cpp  string.cpp
src/crypt/: base64.h
tests/: crypt.cpp  datetime.cpp  json.cpp  main.cpp  string.cpp
